--- a/estilo/style.css
+++ b/estilo/style.css
@@ -31,6 +31,7 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 5vw;
 }
 
 header > p{
@@ -53,6 +54,7 @@ section{
     line-height: 2em;
     padding-left: 25px;
     font-family: var(--fonte3);
+    font-size: 2vw;
 }
 
 section.normal{
@@ -63,16 +65,34 @@ section.normal{
 section.imagem{
     background-color: rgba(51, 51, 51, 0.918);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.555);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p{
     width: 350px;
     background-color: rgba(15, 15, 15, 0.712);
+    text-shadow: 1px 1px 0px black;
+}
+
+section > p{
+    padding-bottom: 1.5em;
+}
+
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-size: cover;
 }
 
 footer{
     background-color: black;
     color: white;
     text-align: center;
-    padding: 8px;
+    padding: 4px;
 }
